* Updated the Install Manifest summary to hide PTSes if they aren't set. Also hide the repos entry all the time. * Fixed anvil-wait-for-drbd where it was no longer able to get config or parse cstate data. * Removed the install manifest entry for enabling scancore given that it is now longer optional. * Added a new striker.conf option; 'sys::install_target::no_warning' which allows enabling the install target without prompting the user for confirmation.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -21,14 +21,14 @@
 
 
 ###############################################################################
-# Install Manifests                                                           #
+# Install Manifests and Targets                                               #
 ###############################################################################
 
 # By default, if a node has internet access, it will be updated during the 
 # installation process. If you are in an environment where updates must be 
 # tested and wish to stick with the versions of programs on the source, set 
 # this to '0' to disable the install-time update attempt. 
-#sys::install_manifest::default::update_os	=	1
+#sys::install_manifest::default::update_os		=	1
 
 # By default, the install manifest uses the standard MTU of 1500 for all
 # networks. This is not (yet) configurable in the Install Manifest menu. If you
@@ -38,7 +38,7 @@
 # NOTE: If the MTU is too large, The install manifest run will hang when it
 #       tries to start DRBD.
 #       
-#sys::install_manifest::default::mtu_size	=	1500
+#sys::install_manifest::default::mtu_size		=	1500
 
 # In rare cases, you may wish to force DRBD into UpToDate/UpToDate state 
 # without an initial sync. Generally this is not a good idea because DRBD's
@@ -50,6 +50,12 @@
 # In short; this calls; 'drbdadm -- --clear-bitmap new-current-uuid <res>'
 # when first building the DRBD resource.
 #sys::install_manifest::default::immediate-uptodate	=	0
+
+# By default, enabling the 'Install Target' feature generates a warning about
+# possible DHCP conflicts when the BCN is not isolated from the IFN. If you 
+# know this isn't a concern, you can prevent these warnings by setting this to
+# '1'.
+sys::install_target::no_warning				=	0
 
 
 ##############################################################################
