* Added the ability to selectively disable ScanCore agents (issue #95). * Added the new locking system (but not yet tested). ** Created the new DB->locking() and ->mark_active() methods. ** Created the new ScanCore->insert_or_update_states() for use storing DB access state info.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -417,7 +417,6 @@ scancore::power::load_shed_delay	=	120
 # impacting both nodes is less likely, so the timeout is set to 120 (2min).
 scancore::temperature::load_shed_delay	=	120
 
-
 # Setting this to an integer will enable a post-scan check of nodes (from the 
 # dashboard) to see if a node's cluster lock manager is hung (as could happen
 # in some rare dual-failure scenarios). If set, the value will be used as a
@@ -439,6 +438,16 @@ scancore::temperature::load_shed_delay	=	120
 #          
 scancore::dashboard::dlm_hung_timeout	=	300
 
+# When ScanCore or an agent wants to lock the database to do a resync or 
+# archive records, it will request a lock on the database. When other 
+# components connect to the database, they will check for a lock and if any 
+# requests are found, enter a wait loop. In the event of a stale lock, ScanCore
+# will reap a lock if it is older that a certain age (5 minutes, by default).
+# Under normal circumstances, the lock requester should automatically 
+# re-request their lock periodically, so that it is always less than this age.
+# If you find that a lock was reaped when it shouldn't have been, you can 
+# increase this lock reap age here.
+#scancore::locking::reap_age		=	300
 
 ### Logging and Language
 # ScanCore itself, plus each agent, can have customized log levels, language,
@@ -461,7 +470,8 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scancore::log_db_transactions		=	0
 
 # The same five variables are used to configure the agents, simply substitute 
-# 'scancore' for the name of the agent. For example, to customize the IPMI
+# 'scancore' for the name of the agent. Additionally, a sixth option is 
+# available for disabling agents. For example, to customize the IPMI
 # scan agent 'scan-ipmitool', you can use:
 # 
 #scan-ipmitool::log_file		=	/var/log/ScanCore.log
@@ -469,6 +479,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-ipmitool::log_language		=	en_CA
 #scan-ipmitool::language		=	en_CA
 #scan-ipmitool::log_db_transactions	=	1
+#scan-ipmitool::disable			=	0
 # 
 # NOTE: The language you choose MUST exist in the XML "strings" files!
 # 
@@ -486,6 +497,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-ipmitool::log_language		=	en_CA
 #scan-ipmitool::language		=	en_CA
 #scan-ipmitool::log_db_transactions	=	0
+#scan-ipmitool::disable			=	0
 
 # LSI/Avago RAID controller scan agent:
 #scan-storcli::log_file			=	/var/log/ScanCore.log
@@ -493,6 +505,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-storcli::log_language		=	en_CA
 #scan-storcli::language			=	en_CA
 #scan-storcli::log_db_transactions	=	0
+#scan-storcli::disable			=	0
 
 # RHEL's Resource Group manager's 'clustat' scan agent:
 #scan-clustat::log_file			=	/var/log/ScanCore.log
@@ -500,6 +513,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-clustat::log_language		=	en_CA
 #scan-clustat::language			=	en_CA
 #scan-clustat::log_db_transactions	=	0
+#scan-clustat::disable			=	0
 
 # Linux bond driver scan agent:
 #scan-bond::log_file			=	/var/log/ScanCore.log
@@ -507,6 +521,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-bond::log_language		=	en_CA
 #scan-bond::language			=	en_CA
 #scan-bond::log_db_transactions		=	0
+#scan-bond::disable			=	0
 
 # APC/Schneider brand SNMP UPS scan agent:
 #scan-apc-ups::log_file			=	/var/log/ScanCore.log
@@ -514,6 +529,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-apc-ups::log_language		=	en_CA
 #scan-apc-ups::language			=	en_CA
 #scan-apc-ups::log_db_transactions	=	0
+#scan-apc-ups::disable			=	0
 
 # KVM/QEMU virtual machine scan agent:
 #scan-server::log_file			=	/var/log/ScanCore.log
@@ -521,6 +537,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-server::log_language		=	en_CA
 #scan-server::language			=	en_CA
 #scan-server::log_db_transactions	=	0
+#scan-server::disable			=	0
 
 
 ###############################
