* Cleaned up a lot of code; Removed 'Alert->error({fatal...', changed '"$THIS_FILE"' to remove the quotes, etc. * Removed "it's" in favour of "it is" or, often, the improper use when I meant "its".
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -626,7 +626,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 # 
 # The goal here is to minimize the risk of damage to the hardware. ScanCore
 # tries to shutdown a node before it goes into hardware-thermal shutdown and
-# before damage can occur, but it's not perfect. It is possible that thermal
+# before damage can occur, but it is not perfect. It is possible that thermal
 # shutdown is disabled in the BIOS and that the graceful shutdown of the node
 # could take too long and damage could occur. This increasing delay is 
 # designed to help minimize the risk of a chronic failure in the node causing
@@ -792,7 +792,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 # user accidentally inserting a USB drive they don't want reformated!
 remote-usb::enable_remote_usb_mount	=	0
 
-# When it's time to mount the local USB drive's mount point on a remote
+# When it is time to mount the local USB drive's mount point on a remote
 # machine, we need to pass credentials to the remote machine in order for it
 # to connect to this machine.
 #
@@ -840,7 +840,7 @@ remote-usb::enable_remote_usb_mount	=	0
 # the following variable.
 #remote-usb::luks::passphrase		=	supersecret
 
-# If the partition is not 'ext4' or if it's not encrypted, setting this to '1'
+# If the partition is not 'ext4' or if it is not encrypted, setting this to '1'
 # will cause the drive to be reformatted and encrypted without prompt. This
 # should only be enabled in very specific circumstances. If used, be sure to
 # warn users that their drives will be reformatted if they plug them into a
