* Got auto-archiving working for the 'agents' and 'temperature' tables in ScanCore (they will be a template for everything else). * Created 'System->compress_file()' to compress the given file using 'bzip2', which uses '--fast' when run on a node to reduce memory used in the compression process. * Silenced some logging.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -307,16 +307,26 @@ scancore::update_age_limit		=	1200
 #scancore::sleep_time			=	60
 
 # To keep ScanCore's database growth in check, an auto-archive mechanism is 
-# used where, at the end of each scan, the number of records in the history
-# schema for a given table are counted. When the number exceeds the trigger,
-# the 'count' number of records are written to a file, removed from the DB and
-# then the archive file is compressed. The archives are all stored in the 
-# specified directory using the name format '<agent>.<table>.<timestamp>.bz2'
-# and the archives are synced between dashboards for safe keeping. Archive
-# files are never removed automatically.
+# used by some agents where, at the end of each scan, the number of records in
+# the history schema for a given table are counted (restricted to the agent's 
+# host, when appropriate). 
+# 
+# When the number exceeds the trigger, the number of records that are archived
+# is approximately (number of records above trigger + 'count'). This is not an
+# exact number because a representative timestamp will be selected from the
+# hostory schema at this count, and then any record equal to or older than the
+# time stamp is removed.
+# 
+# The archives are all stored in the specified 
+# directory using the name format '<agent>.<table>.<timestamp>.bz2' and the
+# archives are synced between dashboards for safe keeping. Archive files are 
+# never removed automatically.
+# 
+# NOTE: If the archive directory doesn't exist, ScanCore will create it 
+#       automatically the first time it is needed.
 scancore::archive::directory		=	/var/ScanCore/archives/
-scancore::archive::trigger		=	250000
-scancore::archive::count		=	100000
+scancore::archive::trigger		=	100000
+scancore::archive::count		=	50000
 
 # Database connection variables.
 # 
