* Auto-archiving has been added to scan-ipmitool. * Made it possible for a user to disable auto-archive entirely via 'scancore::archive::trigger = 0'.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -322,6 +322,8 @@ scancore::update_age_limit		=	1200
 # archives are synced between dashboards for safe keeping. Archive files are 
 # never removed automatically.
 # 
+# To disable auto-archiving entirely, set 'trigger' to '0'.
+# 
 # NOTE: If the archive directory doesn't exist, ScanCore will create it 
 #       automatically the first time it is needed.
 scancore::archive::directory		=	/var/ScanCore/archives/
