* Updated 'Cman->boot_server()' to check if a server is in a 'failed' state and, if so, disable it before trying to start it. * Updated 'DB->locking()' to only clear a lock if a lock is held open. * Updated 'Striker->_cold_stop_anvil()' to loop and ping a node after calling 'poweroff' so that we don't proceed until the node is actually down. This prevents the peer from acting up when 'anvil-safe-stop' is called and the peer stops responding part way through. * Updated ScanCore's automatic live migration logic to pause for 'scancore::health::migration_delay' seconds (at least) before actually live migrating after the health of a node's health degrades. * Changed the default power load shed delay to 300 seconds and the default thermal load shed delay to 180 seconds. * Updated scan-apc-ups to always update the 'power' table when load shedding is enabled. This was needed because the power load shed delay checks the power table to see if there was power from any UPS powering the node in the last load_shed seconds. If the UPS values didn't change and the power table wasn't updated, it wouldn't be able to tell when power was lost. * Updated scan-ipmitool to only set the 'health' table when it is recording it's own variables, and not when scanning another machine. * Updated anvil-generate-iso to have tc2 as the latest version. * Fixed a bug in striker-installer where ScanCore's crontab entry had a bad redirect. * Silenced a lot of logging. * Fixed a bug in anvil-safe-stop where, when a victim was selected based on having less RAM in use by servers, the wrong node was set as the victim.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -304,6 +304,12 @@ scancore::update_age_limit		=	1200
 # can increase the sleep time to reduce the rate at which data grows, but in 
 # this case, you increase the chance of missing an important event that comes
 # and goes between sweeps.
+# 
+# NOTE: If you increase this, please consider increasing
+#       'scancore::power::load_shed_delay' and 
+#       'scancore::temperature::load_shed_delay' as well because they determine
+#       their time based on historical scan data, which becomes less reliable
+#       when the load_shed times are short and the sleep times are high.
 #scancore::sleep_time			=	60
 
 # To keep ScanCore's database growth in check, an auto-archive mechanism is 
@@ -409,6 +415,11 @@ scancore::disable::boot_nodes		=	0
 #    This is done to reduce the amount of heat being generated to slow down the
 #    speed that a server room/data center heats up after losing cooling.
 # This behaviour can be disabled by setting this to '1'.
+# 
+# NOTE: Agent developers - If you update the power table, check to see if this
+#       is set. If it is, only update 'power' as needed. If it is NOT disabled,
+#       update 'power' on every pass so that ScanCore can tell when power was
+#       lost and honour the 'scancore::power::load_shed_delay' properly.
 scancore::disable::load_shedding	=	0
 
 # When both nodes lose power, load shedding (when enabled) is delayed for a 
@@ -416,13 +427,32 @@ scancore::disable::load_shedding	=	0
 # failures. For example, shedding load when you're moving the rack to new power
 # outlets is slightly overkill. This controls how long (in seconds) we need to 
 # lose all power before load shedding is triggered. The default is 120 (2min).
-scancore::power::load_shed_delay	=	120
+scancore::power::load_shed_delay	=	300
 
 # When both nodes enter a thermal warning state, load shedding (when enabled)
 # is delayed for a period of time. The logic here is the same as with power 
 # load shedding delay, except the likelyhood of a transient thermal event 
 # impacting both nodes is less likely, so the timeout is set to 120 (2min).
-scancore::temperature::load_shed_delay	=	120
+scancore::temperature::load_shed_delay	=	180
+
+# When a node becomes "healthier" than it's peer, it will migrate any servers 
+# on the peer to itself. A node's "health" is measured by various agents 
+# setting health scores for a node based on certain criteria, the details of
+# which are left up to the given agents. 
+# 
+# ScanCore, at the end of the scan, sums the health scores (if any) and the 
+# node with the lowest score is declared "healthier". If a node stays healthier
+# than the other for a period of time, "preventative migration" is performed.
+# The minimum amount of time that one node needs to be healthier that the other
+# before migration occurs is controlled here.
+# 
+# NOTE: This delay is important because some health scores are set via external
+#       devices, like UPSes. Without this delay, server migration may occur as
+#       soon as one node scans the external devices first, when in fact, both
+#       nodes are still equally healthy (or equally sick, as the case may be).
+#       Thus, be sure to keep this value set to a value greater than the 
+#       'scancore::sleep_time' time.
+scancore::health::migration_delay	=	180
 
 # Setting this to an integer will enable a post-scan check of nodes (from the 
 # dashboard) to see if a node's cluster lock manager is hung (as could happen
