* Removed the 'history.states' table from ScanCore along with the associated SQL procedure and trigger. This table was growing very rapidly and served no purpose important enough to justify the complexity it was inducing. * Updated DB->do_db_write() to check if an array of queries was >25k and, if so, split the array into 25k chunks to commit independently, thus reducing memory footprint. * Moved ScanCore's 'check_ram_usage()' function to 'ScanCore.pm' and made it a method. Then called it between each scan agent invocation as well as after committing each 25k chunk in DB->do_db_write(). * Disabled perl's deep recursion warnings. * Moved several 'update_db_X' functions to use log level 3. * Updated scan-ipmitool to uses a dedicated function call to convert a given ipmitool_value_ipmitool_uuid into the ipmitool_value_id. * Boosted ScanCore's default allowed RAM usage to 1 GiB. * Bumped the release version to tc5.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -282,12 +282,12 @@ scancore::enabled			=	1
 # ScanCore always checks to see how much RAM it is using at the end of a given
 # scan sweep. This isn't an exact number as it includes all shared libraries.
 # This is done to catch memory leaks and suicide before it becomes a problem.
-# The default is to allow 512 MiB of RAM to be used. However, on some systems
+# The default is to allow 1 GiB of RAM to be used. However, on some systems
 # with a very large number of sensors/scan agent data, a DB resync could cause
 # the RAM use to climb higher that this. If you find that ScanCore restarts 
 # when a dashboard restarts, then you can increase this value. Please note that
 # the value is expressed in bytes.
-#scancore::maximum_ram			=	536870912
+#scancore::maximum_ram			=	1073741824
 
 # ScanCore will periodically get started by cron (default is once per minute).
 # When it starts, it checks to see if another copy is already running. If not,
