* Made the maximum per-commit DB transaction size configurable via the new 'sys::db::maximum_batch_size' variable. * Fixed a bug in how large DB transactions are split up. * Disabled the not-yet-finished local striker config menu in 'configure'.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -19,6 +19,14 @@
 # suck at AJAX... Patches welcomed. ;)
 #sys::reload_page_timer		=	0
 
+# When multiple database writes are needed, they will be batched to increase
+# performance. However, this consumes more memory. By default, the database
+# method will break up any batch of database writes larger than 25,000 calls at
+# a time. If your system has less than normal memory, this can be reduced. If
+# your node or dashboard has more than average memory, this can be increased to
+# reduce resync time.
+#sys::db::maximum_batch_size	=	25000
+
 
 ###############################################################################
 # Install Manifests and Targets                                               #
