* Finished making the rebuild of a node via Install Manifest work properly (though more testing is still needed). This commit handles SSH key/fingerprint management for replacing the lost node's SSH details with the rebuilt node's details. * Quieted some logging in DB.pm.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -232,6 +232,19 @@ tools::anvil-safe-start::enabled	=	0
 #
 tools::striker-push-ssh::enabled	=	1
 
+# If 'tools::striker-push-ssh::enabled' is enabled, it will check to see if a
+# node's SSH fingerprint has changed, as would happen when a node is replaced.
+# If the key has changed, it will delete the old key and record the new one,
+# allowing virtual machine manager to still work properly.
+# 
+# As above, this opens up a security risk.
+# 
+# Turning this off will mean that you will have to manually delete old SSH
+# fingerprints from the dashboard's ~/.ssh/known_hosts file and then add the
+# new key with 'ssh-copy-id root@<full_node_name>' as the desktop user.
+tools::auto-update-ssh-fingerprints::enabled	=	1
+
+
 # Set this to '1' to have Striker automatically configure Virtual Machine 
 # Manager when new Anvil! systems are added to Striker. Note that this has no
 # effect unless 'virt-manager' is installed.
