* Updated the kickstarts and syslinux files to support NVMe-based dashboards (needs testing). * Updating 'anvil-safe-start' to use '@reboot' in crontab instead of running every minute (not finished). * Updated Striker.pm->scan_anvil() to first check if the nodes are off before trying to scan the nodes. This should speed up responsiveness when one or both nodes are off.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/ISO/CentOS/6/Anvil/syslinux/syslinux.cfg
+++ b/ISO/CentOS/6/Anvil/syslinux/syslinux.cfg
@@ -57,27 +57,53 @@ LABEL next
 	MENU DEFAULT
 	localboot -1
 
-LABEL usb-new-striker01
-	MENU LABEL ^1) New Striker Dashboard 01 - CentOS 6 - USB - Deletes All Existing Data!
+LABEL usb-new-striker01-sdb
+	MENU LABEL ^1) New Striker Dashboard 01 - CentOS 6 - USB on sdb - Deletes All Existing Data!
 	TEXT HELP
 	
-		Installs a new Striker Dashboard 01 using CentOS 6. Will create a traditional
-		/boot + MBR install for systems with traditional BIOSes. Partition will 
-		be 0.5 GiB /boot, 4 GiB <swap>, remainder for /.
+		Installs a new Striker Dashboard 01 using CentOS 6 where the USB drive
+		is /dev/sdb (traditional systems). Will create a traditional /boot + MBR
+		install for systems with traditional BIOSes. Partition will be 0.5 GiB 
+		/boot, 4 GiB <swap>, remainder for /.
 	ENDTEXT
 	KERNEL vmlinuz
 	APPEND initrd=initrd.img repo=hd:sdb1:/ ks=hd:sdb1:ks/usb-new-striker01.ks
 	
-LABEL usb-new-striker02
-	MENU LABEL ^2) New Striker Dashboard 02 - CentOS 6 - USB - Deletes All Existing Data!
+LABEL usb-new-striker02-sdb
+	MENU LABEL ^2) New Striker Dashboard 02 - CentOS 6 - USB on sdb - Deletes All Existing Data!
 	TEXT HELP
 
-		Installs a new Striker Dashboard 02 using CentOS 6. Will create a traditional
-		/boot + MBR install for systems with traditional BIOSes. Partition will 
-		be 0.5 GiB /boot, 4 GiB <swap>, remainder for /.
+		Installs a new Striker Dashboard 02 using CentOS 6 where the USB drive
+		is /dev/sdb (traditional systems). Will create a traditional /boot + MBR
+		install for systems with traditional BIOSes. Partition will be 0.5 GiB 
+		/boot, 4 GiB <swap>, remainder for /.
 	ENDTEXT
 	KERNEL vmlinuz
 	APPEND initrd=initrd.img repo=hd:sdb1:/ ks=hd:sdb1:ks/usb-new-striker02.ks
+
+LABEL usb-new-striker01-sda
+	MENU LABEL ^3) New Striker Dashboard 01 - CentOS 6 - USB on sda - Deletes All Existing Data!
+	TEXT HELP
+	
+		Installs a new Striker Dashboard 01 using CentOS 6 where the USB drive
+		is /dev/sda (systems using NVMe drives, etc). Will create a traditional
+		/boot + MBR install for systems with traditional BIOSes. Partition will
+		be 0.5 GiB /boot, 4 GiB <swap>, remainder for /.
+	ENDTEXT
+	KERNEL vmlinuz
+	APPEND initrd=initrd.img repo=hd:sda1:/ ks=hd:sda1:ks/usb-new-striker01.ks
+	
+LABEL usb-new-striker02-sda
+	MENU LABEL ^4) New Striker Dashboard 02 - CentOS 6 - USB on sda - Deletes All Existing Data!
+	TEXT HELP
+
+		Installs a new Striker Dashboard 02 using CentOS 6 where the USB drive
+		is /dev/sda (systems using NVMe drives, etc). Will create a traditional
+		/boot + MBR install for systems with traditional BIOSes. Partition will
+		be 0.5 GiB /boot, 4 GiB <swap>, remainder for /.
+	ENDTEXT
+	KERNEL vmlinuz
+	APPEND initrd=initrd.img repo=hd:sda1:/ ks=hd:sda1:ks/usb-new-striker02.ks
 
 label rescue
 	MENU LABEL ^B) Rescue installed system
