* Changed the call to 'anvil-safe-stop' to have a timeout of 20 minutes instead of 2 minutes, which will hopefully fix the occassional failure of "Cold Stop" to complete. * Updated the boot menu titles to be a bit more clear when running a USB-based install. * Finished updating anvil-safe-start to use '@reboot' in crontab, removing the need for the convoluted rc3.d hack. Added a check to see if the old config style exists and update it if needed. * Added a bunch of missing RPMs to the generated ISO repository (how did this ever work?!). * Updated striker-installer to call 'lsusb -v' and look for D-Link when deciding if an ASIX-based USB adapter is present.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -168,26 +168,14 @@ sys::apc::reboot::sleep_time		=	60
 # stack and then boot servers on the preferred host if possible, or on the
 # healthiest node when not.
 # 
-# This variable controls when 'anvil-safe-start' runs. If set to '1', it will
-# run within one minute and that run will reset this back to '0'. On node boot,
-# an rc3.d script changes this value to '1' and exits (so that the run doesn't
-# block the boot process). Once it runs, anvil-safe-start resets this to 0 so
-# that it won't run again until the next reboot.
+# Set this to '1' to have the Anvil! start (or the node join) on boot. Set to
+# '0' to disable this feature. If disabled, a node will not joing an Anvil!
+# automatically. This can be useful when performing maintenance on a node.
 # 
-# If you want to disable anvil-safe-start entirely, please use:
-# 
-# /sbin/striker/anvil-safe-start --disable
-# 
-# To re-enable this feature later, use:
-# 
-# /sbin/striker/anvil-safe-start --enable
-# 
-# Note that servers set to 'Do Not Start' in Striker, or that were gracefully
-# shut off in striker, will stay off. Servers stopped as part of a Cold 
-# Shutdown and any servers running after a total loss of power or an emergency
-# shutdown will start.
-# 
-# DO NOT CHANGE THIS VALUE MANUALLY.
+# NOTE: Servers set to 'Do Not Start' in Striker, or that were gracefully shut
+# off in striker, will stay off. Servers stopped as part of a Cold Shutdown and
+# any servers running after a total loss of power or an emergency shutdown will
+# start.
 tools::anvil-safe-start::enabled	=	0
 
 # During anvil-safe-start, when it first connects the replicated storage layer,
