--- a/ISO/CentOS/6/Anvil/syslinux/syslinux.cfg
+++ b/ISO/CentOS/6/Anvil/syslinux/syslinux.cfg
@@ -58,7 +58,7 @@ LABEL next
 	localboot -1
 
 LABEL usb-new-striker01-sdb
-	MENU LABEL ^1) New Striker Dashboard 01 - CentOS 6 - USB on sdb - Deletes All Existing Data!
+	MENU LABEL ^1) New Striker Dashboard 01 - CentOS 6 - USB on sdb (Standard) - Deletes All Existing Data!
 	TEXT HELP
 	
 		Installs a new Striker Dashboard 01 using CentOS 6 where the USB drive
@@ -70,7 +70,7 @@ LABEL usb-new-striker01-sdb
 	APPEND initrd=initrd.img repo=hd:sdb1:/ ks=hd:sdb1:ks/usb-new-striker01.ks
 	
 LABEL usb-new-striker02-sdb
-	MENU LABEL ^2) New Striker Dashboard 02 - CentOS 6 - USB on sdb - Deletes All Existing Data!
+	MENU LABEL ^2) New Striker Dashboard 02 - CentOS 6 - USB on sdb (Standard) - Deletes All Existing Data!
 	TEXT HELP
 
 		Installs a new Striker Dashboard 02 using CentOS 6 where the USB drive
@@ -82,7 +82,7 @@ LABEL usb-new-striker02-sdb
 	APPEND initrd=initrd.img repo=hd:sdb1:/ ks=hd:sdb1:ks/usb-new-striker02.ks
 
 LABEL usb-new-striker01-sda
-	MENU LABEL ^3) New Striker Dashboard 01 - CentOS 6 - USB on sda - Deletes All Existing Data!
+	MENU LABEL ^3) New Striker Dashboard 01 - CentOS 6 - USB on sda (NVMe) - Deletes All Existing Data!
 	TEXT HELP
 	
 		Installs a new Striker Dashboard 01 using CentOS 6 where the USB drive
@@ -94,7 +94,7 @@ LABEL usb-new-striker01-sda
 	APPEND initrd=initrd.img repo=hd:sda1:/ ks=hd:sda1:ks/usb-new-striker01.ks
 	
 LABEL usb-new-striker02-sda
-	MENU LABEL ^4) New Striker Dashboard 02 - CentOS 6 - USB on sda - Deletes All Existing Data!
+	MENU LABEL ^4) New Striker Dashboard 02 - CentOS 6 - USB on sda (NVMe) - Deletes All Existing Data!
 	TEXT HELP
 
 		Installs a new Striker Dashboard 02 using CentOS 6 where the USB drive
