* This adds the new 'ScanCore->get_node_health()' which returns the numerical health score for the target node. * This adds the new 'System->pick_shutdown_target()' which uses much the same logic that tools/anvil-safe-stop's 'load_shed' function used, but is generalized so that it can be called from striker dashboards or tools on the nodes. * Updated 'Get->server_data()' to set the migration type to the default when no specific policy is found for a server. * Starting work on the new Cold Stop logic, using the pick_shutdown_target() method. * Fixed a display bug where a user was told that a cold-migration was about to be performed in the migration confirmation, despite the fact that live migration was going to be used. * Fixed a bug where provisioning a server with less that 1 GiB of disk space failed because the requested size was rounded to '0'. Now specific MiB units are used, as they should have been. * Added server type entries for Win10 and Win2016 servers when provisioning servers (properly, this time).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -923,8 +923,9 @@ remote-usb::enable_remote_usb_mount	=	0
 # be configured per-server in Striker and changed at any time. This option
 # allows you to change the default set for new servers to 'cold' (default is
 # 'live'). If this is used, all *new* servers will use this migration method.
-# Note that existing servers will *not* be changed.
-#sys::default::migration_type			=	cold
+# Note that existing servers will *not* be changed. To change those, click on
+# the server's name in the Striker WebUI.
+#sys::default::migration_type			=	warm
 
 # If you need to specify a custom queue length for the interface linking your
 # servers to the Anvil!'s bridge, you can do so by setting the variable below.
