* Created the new 'DB->archive_table()' method that replaces all of the ScanCore 'archive_foo()' functions. This implements a new mechanism to "chunk" up large archive jobs into smaller, bite-sized chunks. This will solve two problems; It will allow the lock age to be updated more reliably during very large archive jobs and it will prevent running into RAM issues during the same. This new method also handles compression as it goes, rather than a single (possibly long and slow) series of compression calls. * Updated 'System->compress_file()' to check if the target file exists and after a compression, that the compressed file exists. It now also returns the compressed file path/name (ir successful) plus the command output.
Signed-off-by: digimer <digimer@pulsar.alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -331,6 +331,14 @@ scancore::update_age_limit		=	1200
 # hostory schema at this count, and then any record equal to or older than the
 # time stamp is removed.
 # 
+# To protect against large memory use or long archive times in the case where 
+# the number of records to archive are particularly large, the 'division' value
+# is used to break up the archive job into "chunks". Generally speaking, the 
+# division should be greater than the count, and never be needed. However, if
+# the archive process takes too long, or if the archive was triggered well 
+# above the trigger value, the division can help prevent using too much memory 
+# at once. If division is set to '0', archive jobs will never be divided.
+# 
 # The archives are all stored in the specified 
 # directory using the name format '<agent>.<table>.<timestamp>.bz2' and the
 # archives are synced between dashboards for safe keeping. Archive files are 
@@ -343,6 +351,7 @@ scancore::update_age_limit		=	1200
 scancore::archive::directory		=	/var/ScanCore/archives/
 scancore::archive::trigger		=	100000
 scancore::archive::count		=	50000
+scancore::archive::division		=	60000
 
 # Database connection variables.
 # 
