* Found a bug where, if a host name was too long, 'clustat' would truncate the host names. To resolve this most reliably, the 'Striker->_parse_clustat' method has been replaced with the new '_parse_clustat_xml' and the clustat call is invoked with the '-x' switch to have it return state information in XML. * Created the new 'Tools.pm->_set_defaults()' method that will set the default values currently being set per-CGI script. Also starting to make the IP pinged to determing Internet access configurable.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -12,12 +12,12 @@
 
 # If you create a custom skin, uncomment this and change the value to the name
 # of the directory your skin is stored in under /var/www/html/skins/
-#sys::skin			=	alteeve
+#sys::skin				=	alteeve
 
 # This controls how many seconds to wait before reloading the main page and
 # status pages. Set to '0' to never refresh the page. Yes, this is because we
 # suck at AJAX... Patches welcomed. ;)
-#sys::reload_page_timer		=	0
+#sys::reload_page_timer			=	0
 
 # When multiple database writes are needed, they will be batched to increase
 # performance. However, this consumes more memory. By default, the database
@@ -25,7 +25,13 @@
 # a time. If your system has less than normal memory, this can be reduced. If
 # your node or dashboard has more than average memory, this can be increased to
 # reduce resync time.
-#sys::db::maximum_batch_size	=	25000
+#sys::db::maximum_batch_size		=	25000
+
+# Periodically, we will check for an Internet connection by trying to ping a
+# IP address on the Internet. The default is to ping Google's open DNS server
+# at '8.8.8.8'. If you want to change this to use a different IP address, you
+# can do so here.
+#sys::network::internet_test_ip		=	8.8.8.8
 
 
 ###############################################################################
@@ -1279,11 +1285,3 @@ sys::single_node_start::enabled			=	1
 # 
 # Setting this to '0' will disable this feature in future Install Manifests.
 #sys::install_manifest::use_anvil-safe-start			=	1
-
-
-###############################################################################
-# Anvil! definitions                                                          #
-###############################################################################
-
-# This has been moved into the ScanCore database. Anvil! definitions in this
-# file will be entirely ignored now.
