* Added missing variables to AN->_set_defaults and cleaned up a couple entries in the stock striker.conf
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -149,7 +149,7 @@ tools::anvil-kick-apc-ups::enabled	=	0
 # commands shown in the Striker UI called "Power Cycle System" and "Power Off
 # System". The former performs a "Cold Stop", then tells the UPSes to power 
 # off in X seconds, stay off for Y seconds, and then restore power. This is a
-# useful mechanism for a total restart of a HAP system (and anything else
+# useful mechanism for a total restart of a Anvil! system (and anything else
 # powered by the system) for remote deployements.
 # 
 # By default, the default shutdown delay (X) is 60 seconds and the sleep time
@@ -182,7 +182,7 @@ sys::apc::reboot::sleep_time		=	60
 # off in striker, will stay off. Servers stopped as part of a Cold Shutdown and
 # any servers running after a total loss of power or an emergency shutdown will
 # start.
-tools::anvil-safe-start::enabled	=	0
+#tools::anvil-safe-start::enabled	=	1
 
 # During anvil-safe-start, when it first connects the replicated storage layer,
 # it checks to see if one of the nodes is 'Inconsistent'. If it is, it checks 
@@ -456,7 +456,7 @@ scancore::power::load_shed_delay	=	300
 # is delayed for a period of time. The logic here is the same as with power 
 # load shedding delay, except the likelyhood of a transient thermal event 
 # impacting both nodes is less likely, so the timeout is set to 120 (2min).
-scancore::temperature::load_shed_delay	=	180
+scancore::temperature::load_shed_delay	=	120
 
 # When a node becomes "healthier" than it's peer, it will migrate any servers 
 # on the peer to itself. A node's "health" is measured by various agents 
@@ -940,7 +940,7 @@ remote-usb::enable_remote_usb_mount	=	0
 # 'live'). If this is used, all *new* servers will use this migration method.
 # Note that existing servers will *not* be changed. To change those, click on
 # the server's name in the Striker WebUI.
-#sys::default::migration_type			=	warm
+#sys::default::migration_type			=	live
 
 # If you need to specify a custom queue length for the interface linking your
 # servers to the Anvil!'s bridge, you can do so by setting the variable below.
@@ -994,7 +994,6 @@ remote-usb::enable_remote_usb_mount	=	0
 ###          be able to rectify problems promptly. 
 # 
 #sys::single_node_start::enabled		=	0
-sys::single_node_start::enabled			=	1
 
 # When 'sys::enable_single_node_start', a node is allowed to start once per
 # period of time. The default is once per day (86,400 seconds). This is meant
