* Fixed a bad variable name (s/actime_timeout/expire_timeout/). * Updated anvil-safe-start to be able to enable/disable when there is no existing 'tools::anvil-safe-start::enabled' variable set in striker.conf.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -33,6 +33,12 @@
 # can do so here.
 #sys::network::internet_test_ip		=	8.8.8.8
 
+# Some commands are particularly risky, and to help avoid them being called by
+# accident if a confirmed page is reloaded, a timeout is set. If the current
+# time is more that this number of seconds after the request time, the command
+# is aborted.
+#sys::expire_timeout			=	180
+
 
 ###############################################################################
 # Install Manifests and Targets                                               #
