* I decided that Striker needed to be able to send email alerts before v2 could be called final, particularly with the new monitoring scancore agents. So this commit adds a mechanism for enabling email alerts from Striker dashboards. Basically, two new striker.conf variables can be used to tell ScanCore to use an existing mail server and one or more notification targets. It's not an elegant solution, but it was the least complex way to do it at this stage in the release cycle. The new variables are 'striker::email::use_server' and 'striker::email::notify'. * Fixed a bug where scan-server-resources would exit if it failed to connect to a target. Now it just throws a warning. The agent also now handles alerts for state changes in the core table (not disk or CPU load alerts yet). This agent is NOT complete yet. * Added columns for 'smtp_alt_server' and 'smtp_alt_port' to Get->smtp_data(), though this method is deprecated and will be removed later. * Cleaned up Math->round() to only take parameters, not an array of arguments. * Added a new 'scancore::servers::reboots_are_warning' to allow a user to make server restarts warning level alerts, instead of the default notify level. This is only implemented in scan-server-resources so far.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -411,6 +411,25 @@ scancore::archive::division		=	60000
 #scancore::db::2::password		=	Initial1
 
 
+# Normally, Striker doesn't send alerts. If you want to send alerts, you can do
+# so by "piggy-backing" on an existing mail server. Enter the domain name set
+# in 'Outgoing Mail Server' in the 'Mail Servers' section.
+# This is messy for legacy reasons, but will be made a lot cleaner in v3. Sorry
+# about that...
+#striker::email::use_server		=	mail.example.com
+
+# To choose who gets alerts, and what level to use, you can enter the email
+# address set as the 'Target' in one or more notification targets. To specify
+# the level of alerts to receive, suffix the email address with 
+# '<email>:<level>'. If no level is specified, 'warning' is used. The valid
+# level strings are 'debug', 'info', 'notice', 'warning' and 'critical'. 
+# Multiple recipients can be specified by separating them with commas.
+#striker::email::notify			=	test@example.com:warning,debug@example.com:notice
+
+# By default, a server rebooting is treated as a notice-level alert. If you 
+# want to make reboots or restarts a warning level alert, set this to '1'.
+#scancore::servers::reboots_are_warning	=	0
+
 # ScanCore can trigger a shutdown of a node for two reasons; Overheating and
 # insufficient remaining runtime in batteries. The former protects your nodes
 # from potential damage. Both provide a mechanism for gracefully shutting down
